--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -29,6 +29,14 @@ jobs:
           flutter-version: '3.38.0-0.2.pre'
           channel: 'beta'
 
+      - name: Clean Gradle and build cache
+        run: |
+          rm -rf .gradle
+          rm -rf android/.gradle
+          rm -rf android/build
+          flutter clean
+
+
       - name: Install dependencies
         run: flutter pub get
 
