--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -1,56 +1,109 @@
-name: Build Flutter App
+name: Build Android APK
 
 on:
   push:
-    branches: [main]
+    branches: [ main, master, develop ]
   pull_request:
-    branches: [main]
+    branches: [ main, master, develop ]
   workflow_dispatch:
 
 jobs:
   build:
-    name: Build Flutter App
+    name: Build Flutter APK
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-
-      - name: Set up Flutter (beta 3.38.0-0.2.pre)
-        uses: flutter-actions/setup-flutter@v2
-        with:
-          flutter-version: '3.38.0-0.2.pre'
-          channel: 'beta'
-
-      - name: Clean Gradle and build cache
-        run: |
-          rm -rf .gradle
-          rm -rf android/.gradle
-          rm -rf android/build
-          flutter clean
-
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Analyze code
-        run: flutter analyze
-
-      - name: Run tests
-        run: flutter test
-
-      - name: Build APK (Release)
-        run: flutter build apk --release
-
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+      
+    - name: Setup Java 17
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+        cache: 'gradle'
+        
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.24.0'
+        channel: 'stable'
+        cache: true
+        
+    - name: Cache Flutter Dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.pub-cache
+          ${{ github.workspace }}/flutter_app/.dart_tool
+        key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-flutter-
+          
+    - name: Cache Gradle
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+          flutter_app/android/.gradle
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+          
+    - name: Flutter Doctor
+      run: flutter doctor -v
+      
+    - name: Get Flutter Dependencies
+      working-directory: flutter_app
+      run: flutter pub get
+      
+    - name: Verify Gradle Wrapper
+      working-directory: flutter_app/android
+      run: |
+        chmod +x gradlew
+        ./gradlew --version
+        
+    - name: Clean Flutter Build
+      working-directory: flutter_app
+      run: flutter clean
+      
+    - name: Build APK (Debug)
+      working-directory: flutter_app
+      run: flutter build apk --debug
+      
+    - name: Build APK (Release)
+      working-directory: flutter_app
+      run: flutter build apk --release
+      
+    - name: Build App Bundle (Release)
+      working-directory: flutter_app
+      run: flutter build appbundle --release
+      
+    - name: Upload Debug APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: viscend-studio-debug-apk
+        path: flutter_app/build/app/outputs/flutter-apk/app-debug.apk
+        retention-days: 7
+        
+    - name: Upload Release APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: viscend-studio-release-apk
+        path: flutter_app/build/app/outputs/flutter-apk/app-release.apk
+        retention-days: 30
+        
+    - name: Upload App Bundle
+      uses: actions/upload-artifact@v4
+      with:
+        name: viscend-studio-app-bundle
+        path: flutter_app/build/app/outputs/bundle/release/app-release.aab
+        retention-days: 30
+        
+    - name: Display Build Info
+      run: |
+        echo "✅ Build completed successfully!"
+        echo "📱 APK Size (Debug): $(du -h flutter_app/build/app/outputs/flutter-apk/app-debug.apk | cut -f1)"
+        echo "📱 APK Size (Release): $(du -h flutter_app/build/app/outputs/flutter-apk/app-release.apk | cut -f1)"
+        echo "📦 Bundle Size: $(du -h flutter_app/build/app/outputs/bundle/release/app-release.aab | cut -f1)"
