--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -77,7 +77,8 @@ jobs:
       run: flutter pub upgrade
 
     - name: Run Gradle with warnings
-      run: ./gradlew assembleDebug --warning-mode all
+      run: chmod +x gradlew && ./gradlew assembleDebug --warning-mode all
+
 
     - name: Build APK (Debug)
       run: flutter build apk --debug -v
