--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,14 +67,7 @@ flutter:
           weight: 700
 
 dependency_overrides:
-  shared_preferences_android: ^2.4.15
-  shared_preferences_foundation: ^2.5.5
-  sqflite_android: ^2.4.2+2
-  sqflite_common: ^2.5.6
-  sqflite_darwin: ^2.4.2
-  path_provider_android: ^2.2.20
-  path_provider_foundation: ^2.4.3
-  url_launcher_android: ^6.3.24
-  url_launcher_ios: ^6.3.5
-  url_launcher_macos: ^3.2.4
-  url_launcher_web: ^2.4.1
+  shared_preferences_android: ^2.5.0
+  sqflite_android: ^2.3.0
+  path_provider_android: ^2.5.0
+  url_launcher_android: ^6.3.0
