--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,3 +70,10 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
+android.applicationVariants.all { variant ->
+    variant.outputs.all { output ->
+        def newName = "${variant.name}-${variant.versionName}.apk"
+        output.outputFileName = newName
+    }
+}
