--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,9 +71,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
-android.applicationVariants.all { variant ->
-    variant.outputs.all { output ->
-        def newName = "${variant.name}-${variant.versionName}.apk"
-        output.outputFileName = newName
+android {
+    applicationVariants.all { variant ->
+        variant.outputs.configureEach {
+            outputFileName = "${variant.name}-${variant.versionName}.apk"
+        }
     }
 }
+
