--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,15 +40,15 @@ android {
         }
     }
 
-    splits {
-        abi {
-            // isEnable = true
-            reset()
-            include("x86_64", "armeabi-v7a", "arm64-v8a")
-            isUniversalApk = false
-        }
-    }
-}
+//     splits {
+//         abi {
+//             // isEnable = true
+//             reset()
+//             include("x86_64", "armeabi-v7a", "arm64-v8a")
+//             isUniversalApk = false
+//         }
+//     }
+// }
 
 flutter {
     source = "../.."
