--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -37,6 +37,18 @@ jobs:
         channel: 'stable'
         cache: true
 
+    - name: create flutter
+      run: flutter create .
+
+    - name: Install Gradle 8.7
+      uses: gradle/gradle-build-action@v2
+      with:
+          gradle-version: 8.7
+
+    - name: Generate Gradle Wrapper (if missing)
+      working-directory: android
+      run: gradle wrapper
+
     - name: Cache Flutter Dependencies
       uses: actions/cache@v4
       with:
